--- a/index.html
+++ b/index.html
@@ -245,6 +245,16 @@
     </div>
   </div>
 
+
+  <div id="floating-cart" class="cart-bubble hidden">
+  <div class="bubble-content">
+    <span class="bubble-count">0</span>
+    <button id="open-cart-floating">
+      🛒
+    </button>
+  </div>
+</div>
+
   <!-- ===== FOOTER ===== -->
   <footer class="app-footer">
     <div class="footer-content">
